# tc-order-service

./: Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: pr-comment.yml  release-dev.yml  release-prod.yml  test-coverage.yml
.github/worklfows/: pr-checks.yml
alembic/: env.py
app/: main.py
app/database/: database.py
app/models/: models.py  schemas.py
app/routers/: category.py  order.py  product.py
app/services/: repository.py  security.py
app/tests/: test_endpoints.py  test_services_repository.py  test_services_security.py
app/tools/: initialize_db.py  logging.py
cmd/: entrypoint.sh
infra/base/order/: deployment.yaml  order-service-config.yaml
infra/kubernetes/base/: kustomization.yaml
infra/kubernetes/base/db/: postgres-db-deployment.yaml  postgres-db-pvc.yaml  postgres-db-service.yaml
infra/kubernetes/base/order/: deployment.yaml  service.yaml
infra/kubernetes/development/: kustomization.yaml  order-service-config.yaml  patch-deployment.yaml
infra/kubernetes/production/: kustomization.yaml  patch-deployment.yaml
infra/production/: patch-deployment.yaml
